apps/downloaders/profilarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
  labels:
    app.kubernetes.io/name: downloaders
    app.kubernetes.io/component: profilarr
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: downloaders
      app.kubernetes.io/component: profilarr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app.kubernetes.io/name: downloaders
        app.kubernetes.io/component: profilarr
        app.kubernetes.io/part-of: media
    spec:
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: profilarr
        image: ghcr.io/dictionarry-hub/profilarr:latest
        ports:
        - containerPort: 6868
          name: http
        startupProbe:
          httpGet:
            port: http
            path: /
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 60
        readinessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 60
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: run
          mountPath: /run
        - name: tmp
          mountPath: /tmp
        - name: config
          mountPath: /config
          readOnly: false
        resources:
          requests:
            memory: 512Mi
            cpu: 200m
          limits:
            memory: 1024Mi
            cpu: 1
      - name: profilarr-parser
        image: ghcr.io/dictionarry-hub/profilarr-parser:latest
        ports:
        - containerPort: 5000
          name: parser
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 500m
      volumes:
      - name: run
        emptyDir:
          medium: Memory
      - name: tmp
        emptyDir:
          medium: Memory
      - name: config
        persistentVolumeClaim:
          claimName: profilarr-config
