apps/downloaders/profilarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilarr
  namespace: media
spec:
  ports:
  - name: http
    port: 6868
    targetPort: http
  selector:
    app.kubernetes.io/component: profilarr
