apps/downloaders/profilarr/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: profilarr
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: media
    sectionName: profilarr-https-gw
  hostnames:
  - profilarr.media.moya.lemon.narthollis.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: profilarr
      port: 6868
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-network
